Refactor code for clarity and efficiency: fix code warnings